test_suite5/ALAN/test_suite/alan-2022-examples/failing/006670_mutation.alan
source W begin leave 6486 while 7 do relax end end
